--- a/Proteins/Base.lproj/Main.storyboard
+++ b/Proteins/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,77 +15,89 @@
             <objects>
                 <viewController storyboardIdentifier="Login" id="RB2-Lk-A0R" customClass="ViewController" customModule="Proteins" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qDZ-kh-0J0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6cH-f9-nbb">
-                                <rect key="frame" x="16" y="277.5" width="343" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="512x512bb" translatesAutoresizingMaskIntoConstraints="NO" id="0jo-tU-Pt7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6cH-f9-nbb">
+                                <rect key="frame" x="112" y="328" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="hgi-sA-hMC"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your iPhone passcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNS-MS-1z6">
-                                <rect key="frame" x="17" y="236.5" width="343" height="21"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCm-ei-19e">
-                                <rect key="frame" x="134" y="325.5" width="106" height="36"/>
-                                <color key="backgroundColor" red="0.91064661739999997" green="0.72247558830000003" blue="0.48908895250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="112" y="374" width="150" height="30"/>
+                                <color key="backgroundColor" red="0.43982136249542236" green="0.80246847867965698" blue="0.59996128082275391" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="MCH-aj-N57"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="tZ5-j8-grC"/>
                                 </constraints>
-                                <state key="normal" title="Send">
+                                <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="sendPassBtnPressed:" destination="RB2-Lk-A0R" eventType="touchUpInside" id="rS4-RO-EyH"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="459-hL-p0q">
+                                <rect key="frame" x="130" y="420" width="116" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="XaY-j6-3kt"/>
+                                    <constraint firstAttribute="width" constant="116" id="inM-8i-zGb"/>
+                                </constraints>
+                                <state key="normal" image="Touch-ID-White"/>
+                                <connections>
+                                    <action selector="touchIDBtn:" destination="RB2-Lk-A0R" eventType="touchUpInside" id="c6O-kt-yGw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="aNS-MS-1z6" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" constant="17" id="5xm-Ow-f68"/>
-                            <constraint firstItem="tCm-ei-19e" firstAttribute="centerY" secondItem="SyI-jD-9ue" secondAttribute="centerY" id="MHq-Uw-m0g"/>
-                            <constraint firstItem="6cH-f9-nbb" firstAttribute="top" secondItem="aNS-MS-1z6" secondAttribute="bottom" constant="20" id="OAr-Ct-ABg"/>
-                            <constraint firstItem="SyI-jD-9ue" firstAttribute="trailing" secondItem="aNS-MS-1z6" secondAttribute="trailing" constant="15" id="lR2-zH-HEv"/>
-                            <constraint firstItem="6cH-f9-nbb" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" constant="16" id="oHw-9T-jGg"/>
-                            <constraint firstItem="tCm-ei-19e" firstAttribute="top" secondItem="6cH-f9-nbb" secondAttribute="bottom" constant="18" id="pHT-Fi-gpg"/>
-                            <constraint firstItem="SyI-jD-9ue" firstAttribute="trailing" secondItem="tCm-ei-19e" secondAttribute="trailing" constant="135" id="pnd-c0-0ic"/>
-                            <constraint firstItem="tCm-ei-19e" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" constant="134" id="rL2-SS-eqq"/>
-                            <constraint firstItem="SyI-jD-9ue" firstAttribute="trailing" secondItem="6cH-f9-nbb" secondAttribute="trailing" constant="16" id="zSr-6j-euG"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="bottom" secondItem="SyI-jD-9ue" secondAttribute="bottom" constant="34" id="CYg-Lk-bBC"/>
+                            <constraint firstItem="tCm-ei-19e" firstAttribute="centerY" secondItem="0jo-tU-Pt7" secondAttribute="centerY" constant="-17" id="Dgr-CJ-0VG"/>
+                            <constraint firstItem="tCm-ei-19e" firstAttribute="centerX" secondItem="0jo-tU-Pt7" secondAttribute="centerX" id="FIu-Rt-lyh"/>
+                            <constraint firstItem="459-hL-p0q" firstAttribute="centerX" secondItem="0jo-tU-Pt7" secondAttribute="centerX" id="J8g-W6-1g5"/>
+                            <constraint firstItem="tCm-ei-19e" firstAttribute="top" secondItem="6cH-f9-nbb" secondAttribute="bottom" constant="16" id="Nph-cs-lQc"/>
+                            <constraint firstItem="459-hL-p0q" firstAttribute="top" secondItem="tCm-ei-19e" secondAttribute="bottom" constant="16" id="Ufb-qZ-cMa"/>
+                            <constraint firstItem="6cH-f9-nbb" firstAttribute="centerX" secondItem="0jo-tU-Pt7" secondAttribute="centerX" id="Vli-8F-Hlk"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="top" secondItem="qDZ-kh-0J0" secondAttribute="top" id="XuT-IJ-pfZ"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="trailing" secondItem="SyI-jD-9ue" secondAttribute="trailing" id="bkm-Mz-z7M"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" id="prw-de-r2T"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SyI-jD-9ue"/>
                     </view>
                     <connections>
-                        <outlet property="btn" destination="tCm-ei-19e" id="v4f-UD-BAn"/>
-                        <outlet property="label" destination="aNS-MS-1z6" id="ZDK-dC-xCs"/>
+                        <outlet property="loginBtn" destination="tCm-ei-19e" id="ES9-84-klx"/>
                         <outlet property="textField" destination="6cH-f9-nbb" id="EhP-P7-3Lg"/>
+                        <outlet property="touchIDBtn" destination="459-hL-p0q" id="ios-2D-41f"/>
                         <segue destination="ceu-gc-Mpz" kind="show" identifier="toTableView" id="ep7-al-sOv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D9C-c6-duN" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1215" y="564"/>
+            <point key="canvasLocation" x="1213.5999999999999" y="562.3152709359606"/>
         </scene>
         <!--List of proteins-->
         <scene sceneID="PbV-cs-GWG">
             <objects>
                 <viewController id="Fck-bD-dYn" customClass="ListVC" customModule="Proteins" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zOx-3o-o4N">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kHm-ym-efv">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="144" width="375" height="634"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="anP-Ov-pxj" customClass="ProteinCell" customModule="Proteins" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="anP-Ov-pxj" id="IKn-ly-361">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -96,7 +108,7 @@
                                 </connections>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="6tD-r5-xXh">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="Fck-bD-dYn" id="M9L-NJ-6dT"/>
@@ -132,11 +144,11 @@
             <objects>
                 <viewController storyboardIdentifier="ModelVC" id="E7n-tf-XRS" customClass="ModelProteinsViewController" customModule="Proteins" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rAp-id-qWO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKb-sv-NIR">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
                                 <color key="backgroundColor" red="0.0077236697227798749" green="0.021964014888645463" blue="0.18695352979274615" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <connections>
                                     <outlet property="delegate" destination="E7n-tf-XRS" id="9aM-km-uGM"/>
@@ -166,7 +178,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ceu-gc-Mpz" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EWE-aj-54o">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -179,4 +191,8 @@
             <point key="canvasLocation" x="1962" y="564"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="512x512bb" width="256" height="256"/>
+        <image name="Touch-ID-White" width="512" height="512"/>
+    </resources>
 </document>
