--- a/Proteins/Base.lproj/Main.storyboard
+++ b/Proteins/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,29 +22,39 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="459-hL-p0q">
-                                <rect key="frame" x="152" y="370.66666666666669" width="71" height="71"/>
+                                <rect key="frame" x="121" y="349" width="132" height="124"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="71" id="Uba-vo-nbU"/>
-                                    <constraint firstAttribute="height" constant="71" id="fp7-zM-z9a"/>
+                                    <constraint firstAttribute="width" constant="132" id="55o-EE-5l0"/>
+                                    <constraint firstAttribute="height" constant="124" id="NYl-Nw-cxO"/>
                                 </constraints>
                                 <state key="normal" image="passcode"/>
                                 <connections>
                                     <action selector="touchIDBtn:" destination="RB2-Lk-A0R" eventType="touchUpInside" id="c6O-kt-yGw"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Identify yourself" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEE-iB-T6f">
+                                <rect key="frame" x="16" y="276" width="343" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="0jo-tU-Pt7" firstAttribute="bottom" secondItem="SyI-jD-9ue" secondAttribute="bottom" constant="34" id="CYg-Lk-bBC"/>
+                            <constraint firstItem="459-hL-p0q" firstAttribute="centerX" secondItem="SyI-jD-9ue" secondAttribute="centerX" id="Eca-Mf-ov2"/>
+                            <constraint firstItem="SyI-jD-9ue" firstAttribute="trailing" secondItem="QEE-iB-T6f" secondAttribute="trailing" constant="16" id="I8G-vw-oQB"/>
+                            <constraint firstItem="QEE-iB-T6f" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" constant="16" id="JcL-s8-V5J"/>
+                            <constraint firstItem="459-hL-p0q" firstAttribute="top" secondItem="QEE-iB-T6f" secondAttribute="bottom" constant="43" id="PSc-Ye-deW"/>
                             <constraint firstItem="0jo-tU-Pt7" firstAttribute="top" secondItem="qDZ-kh-0J0" secondAttribute="top" id="XuT-IJ-pfZ"/>
                             <constraint firstItem="0jo-tU-Pt7" firstAttribute="trailing" secondItem="SyI-jD-9ue" secondAttribute="trailing" id="bkm-Mz-z7M"/>
-                            <constraint firstItem="459-hL-p0q" firstAttribute="centerY" secondItem="0jo-tU-Pt7" secondAttribute="centerY" id="gUx-Al-xFa"/>
-                            <constraint firstItem="459-hL-p0q" firstAttribute="centerX" secondItem="0jo-tU-Pt7" secondAttribute="centerX" id="jBY-ja-6sW"/>
                             <constraint firstItem="0jo-tU-Pt7" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" id="prw-de-r2T"/>
+                            <constraint firstItem="459-hL-p0q" firstAttribute="centerY" secondItem="SyI-jD-9ue" secondAttribute="centerY" id="u3m-Yj-N7d"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SyI-jD-9ue"/>
                     </view>
                     <connections>
+                        <outlet property="identifyLabel" destination="QEE-iB-T6f" id="rJC-f5-NUx"/>
                         <outlet property="touchIDBtn" destination="459-hL-p0q" id="vOa-zz-fPs"/>
                         <segue destination="ceu-gc-Mpz" kind="show" identifier="toTableView" id="ep7-al-sOv"/>
                     </connections>
@@ -164,7 +174,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="512x512bb" width="512" height="512"/>
-        <image name="passcode" width="200" height="200"/>
+        <image name="512x512bb" width="256" height="256"/>
+        <image name="passcode" width="512" height="512"/>
     </resources>
 </document>
