--- a/Proteins/Base.lproj/Main.storyboard
+++ b/Proteins/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RB2-Lk-A0R">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -41,14 +41,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="bottom" secondItem="SyI-jD-9ue" secondAttribute="bottom" constant="34" id="CYg-Lk-bBC"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="bottom" secondItem="qDZ-kh-0J0" secondAttribute="bottom" id="CYg-Lk-bBC"/>
                             <constraint firstItem="459-hL-p0q" firstAttribute="centerX" secondItem="SyI-jD-9ue" secondAttribute="centerX" id="Eca-Mf-ov2"/>
                             <constraint firstItem="SyI-jD-9ue" firstAttribute="trailing" secondItem="QEE-iB-T6f" secondAttribute="trailing" constant="16" id="I8G-vw-oQB"/>
                             <constraint firstItem="QEE-iB-T6f" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" constant="16" id="JcL-s8-V5J"/>
                             <constraint firstItem="459-hL-p0q" firstAttribute="top" secondItem="QEE-iB-T6f" secondAttribute="bottom" constant="43" id="PSc-Ye-deW"/>
                             <constraint firstItem="0jo-tU-Pt7" firstAttribute="top" secondItem="qDZ-kh-0J0" secondAttribute="top" id="XuT-IJ-pfZ"/>
-                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="trailing" secondItem="SyI-jD-9ue" secondAttribute="trailing" id="bkm-Mz-z7M"/>
-                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="leading" secondItem="SyI-jD-9ue" secondAttribute="leading" id="prw-de-r2T"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="trailing" secondItem="qDZ-kh-0J0" secondAttribute="trailing" id="bkm-Mz-z7M"/>
+                            <constraint firstItem="0jo-tU-Pt7" firstAttribute="leading" secondItem="qDZ-kh-0J0" secondAttribute="leading" id="prw-de-r2T"/>
                             <constraint firstItem="459-hL-p0q" firstAttribute="centerY" secondItem="SyI-jD-9ue" secondAttribute="centerY" id="u3m-Yj-N7d"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SyI-jD-9ue"/>
@@ -121,7 +121,7 @@
             </objects>
             <point key="canvasLocation" x="2769" y="564"/>
         </scene>
-        <!--Model ProteinsVC-->
+        <!--Title-->
         <scene sceneID="pZA-Ug-jH7">
             <objects>
                 <viewController storyboardIdentifier="ModelVC" id="E7n-tf-XRS" customClass="ModelProteinsVC" customModule="Proteins" customModuleProvider="target" sceneMemberID="viewController">
@@ -130,7 +130,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKb-sv-NIR">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="778"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
                                 <color key="backgroundColor" red="0.63904902006529474" green="0.59325329895761914" blue="0.68786354567193742" alpha="0.62" colorSpace="custom" customColorSpace="displayP3"/>
                                 <connections>
                                     <outlet property="delegate" destination="E7n-tf-XRS" id="9aM-km-uGM"/>
@@ -149,15 +149,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NKb-sv-NIR" firstAttribute="leading" secondItem="8ts-Nb-fOT" secondAttribute="leading" id="5qI-gL-x9j"/>
+                            <constraint firstItem="NKb-sv-NIR" firstAttribute="leading" secondItem="rAp-id-qWO" secondAttribute="leading" id="5qI-gL-x9j"/>
                             <constraint firstItem="8ts-Nb-fOT" firstAttribute="bottom" secondItem="ldg-zv-V0v" secondAttribute="bottom" constant="107" id="Ev6-D2-R4W"/>
-                            <constraint firstItem="NKb-sv-NIR" firstAttribute="top" secondItem="rAp-id-qWO" secondAttribute="top" id="FOj-Qo-3uw"/>
-                            <constraint firstItem="NKb-sv-NIR" firstAttribute="trailing" secondItem="8ts-Nb-fOT" secondAttribute="trailing" id="QpM-1c-NFW"/>
+                            <constraint firstItem="NKb-sv-NIR" firstAttribute="top" secondItem="8ts-Nb-fOT" secondAttribute="top" id="FOj-Qo-3uw"/>
+                            <constraint firstItem="8ts-Nb-fOT" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ldg-zv-V0v" secondAttribute="trailing" constant="8" id="QVC-2p-mV5"/>
+                            <constraint firstItem="NKb-sv-NIR" firstAttribute="trailing" secondItem="rAp-id-qWO" secondAttribute="trailing" id="QpM-1c-NFW"/>
                             <constraint firstItem="ldg-zv-V0v" firstAttribute="leading" secondItem="8ts-Nb-fOT" secondAttribute="leading" constant="16" id="iPn-R9-I9b"/>
-                            <constraint firstItem="NKb-sv-NIR" firstAttribute="bottom" secondItem="8ts-Nb-fOT" secondAttribute="bottom" id="kSF-Rt-Lbb"/>
+                            <constraint firstItem="NKb-sv-NIR" firstAttribute="bottom" secondItem="rAp-id-qWO" secondAttribute="bottom" id="kSF-Rt-Lbb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8ts-Nb-fOT"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="E4E-cJ-yE3">
+                        <barButtonItem key="rightBarButtonItem" image="share" id="uZW-H9-vHo">
+                            <connections>
+                                <action selector="shareButton:" destination="E7n-tf-XRS" id="oZF-Aw-Gbx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="proteinsView" destination="NKb-sv-NIR" id="nd9-ce-miC"/>
                         <outlet property="typeLabel" destination="ldg-zv-V0v" id="L7D-fT-LRz"/>
@@ -187,7 +195,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="512x512bb" width="256" height="256"/>
-        <image name="passcode" width="512" height="512"/>
+        <image name="512x512bb" width="512" height="512"/>
+        <image name="passcode" width="491.51998901367188" height="491.51998901367188"/>
+        <image name="share" width="22.5" height="22.5"/>
     </resources>
 </document>
