--- a/Proteins/Base.lproj/Main.storyboard
+++ b/Proteins/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kHm-ym-efv">
                                 <rect key="frame" x="0.0" y="144" width="375" height="634"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.54955035448074341" green="0.17362618446350098" blue="0.074306584894657135" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="anP-Ov-pxj" customClass="ProteinCell" customModule="Proteins" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
